# link-checker

./: .env.sample  .gitignore  CLAUDE.md  Cargo.toml  README.md  rustwrap.yaml
.github/workflows/: homebrew.yml  release.yml
scripts/: install.sh
src/: lib.rs  main.rs
tests/: integration_tests.rs
