[package]
name = "rbqm-link-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["env"] }
cookie = "0.18.1"
dotenvy = "0.15.7"
reqwest = { version = "0.12.4", features = ["blocking", "rustls-tls", "cookies"] }
scraper = "0.19.0"
thiserror = "1.0.61"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
