[package]
name = "link-checker"
version = "0.5.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
ureq = { version = "3.1.2"}
url = "2.5.7"
scraper = "0.24"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12"
ctrlc = "3.5.0"
